Fix nav items spacing

--- a/scss/project/components/_components.main-navigation.scss
+++ b/scss/project/components/_components.main-navigation.scss
@@ -15,6 +15,7 @@
     text-decoration: none;
     padding:0.5em;
     color:$color-nav-link;
+    display:block;
 }
 /* End Shared */
 
